Tue Oct 16 21:59:01 2012  Koichi Sasada  <ko1@atdot.net>

	* benchmark/driver.rb: some refactoring.
	  (1) Remove `average differential'.
	      In this benchmark driver, We should not care about `average'.
	      We use fastest score because this score should not include
	      any disturbances (affections of background process, etc).
	      If you care about timing affect, I recommend `median'
	      score with more than 5 examinations rather than simple
	      `average' score (`average' score was affected by error scores).
	  (2) Show log file name.
	  (3) Change default directory from './' to driver's directory.

Tue Oct 16 14:56:23 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_join): need to check again after any conversion run.
	  [ruby-core:48012] [Bug #7168]

Tue Oct 16 12:52:14 2012  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/ruby/envutil.rb (Test::Unit::Assertions#assert_file):
	  rename from file_assertion.

Tue Oct 16 11:30:18 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_join): hide the result under construction until
	  return.

	* file.c (rb_file_join): check nul-byte only for strings, since
	  FilePathStringValue() does it.  [ruby-core:48012] [Bug #7168]

	* file.c (rb_file_join): path names must be ASCII-compatible.
	  [ruby-core:48012] [Bug #7168]

	* file.c (check_path_encoding): new function to ensure path name
	  encoding to be ASCII-compatible.

Tue Oct 16 09:40:04 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_regexp.rb
	  (TextRegexp#test_raw_hyphen_and_tk_char_type_after_range): use
	  Regexp.new instead of literal to ignore a parser warning.

Tue Oct 16 09:30:30 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_regexp.rb
	  (TextRegexp#test_raw_hyphen_and_tk_char_type_after_range): ignoring
	  warnings are already set in setup method.

Tue Oct 16 06:44:06 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (VM_CALLEE_SETUP_ARG): fix wrong condition.
